crates/auryn-compiler/tests/snapshots/diagnostic_tests__ui@assignment_type_mismatch.au.snap
---
source: crates/auryn-compiler/tests/diagnostic_tests.rs
expression: "fn main() {\n\tlet a: I32 = print(\"Hello\")\n}\n"
input_file: crates/auryn-compiler/tests/inputs/diagnostics/assignment_type_mismatch.au
---
Error: Type mismatch
   ╭─[ main:2:15 ]
   │
 2 │     let a: I32 = print("Hello")
   │                  ───────┬──────  
   │                         ╰──────── Expected `I32`, but got `()`
───╯
